--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,12 @@ compatibility_date = "2024-08-01"
 
 [vars]
 TOKEN_TTL = "1800" # 30 min
-API_TOKEN = "d9f4a1c8-3b6f-4a9e-91a7-6b02fef4aa73"
+API_TOKEN = "f5d1b8e6-3c19-44b2-9e3c-5a11c041dbf4"
+WORKER_DOMAIN = "captcha-verification.instafail.workers.dev"
+
+[assets]
+directory = "src" # It will serve files from /src folder
+binding = "ASSETS"
 
 # KV namespaces
 [[kv_namespaces]]
@@ -14,8 +19,3 @@ id = "142c941cc0664e68b71bce4689bd8771"
 [[kv_namespaces]]
 binding = "CHALLENGES"
 id = "e225f25916364ad687774a686902643c"
-
-# Static assets (HTML, images)
-[assets]
-directory = "src" # It will serve files from /src folder
-binding = "ASSETS"
