--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "captcha-worker",
+  "name": "captcha-verification",
   "version": "1.0.0",
-  "private": true,
+  "description": "Cloudflare Worker for slider puzzle captcha verification",
+  "main": "src/main.js",
   "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
+  },
+  "dependencies": {
+    "itty-router": "^4.0.21"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.114.14"
   }
 }
