--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,7 +11,7 @@ TOKEN_TTL = "1800"
 TOLERANCE = "5"
 
 [site]
-bucket = "./src/html"
+bucket = "./src"
 
 # wrangler.toml (wrangler v3.88.0^)
 [observability.logs]
