--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "itty-router": "^3.0.12"
-  },
-  "devDependencies": {
     "wrangler": "^3.114.14"
+    "@cloudflare/kv-asset-handler": "^0.2.0"
   }
 }
