--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "captcha-verification",
+  "name": "slider-captcha-demo",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Cloudflare Worker slider captcha with KV",
+  "main": "worker.js",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy"
   },
-  "dependencies": {
-    "itty-router": "^3.0.12"
-    "wrangler": "^3.114.14"
-    "@cloudflare/kv-asset-handler": "^0.2.0"
-  }
+  "license": "MIT"
 }
