--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,15 +2,13 @@ name = "slider-captcha-demo"
 main = "worker.js"
 compatibility_date = "2023-10-01"
 
-# Enable logs for debugging
-logpush = true
-
-# KV binding for storing tokens and shortened URLs
 kv_namespaces = [
   { binding = "SHORT_URLS", id = "142c941cc0664e68b71bce4689bd8771" }
 ]
 
-# Serve static assets (HTML, CSS, images) from repo
 [assets]
-directory = "."   # project root
+directory = "."
 binding = "ASSETS"
+
+[observability]
+enabled = true
